@@ -16,6 +16,10 @@ body
 {
     width: 240px;
 }
+p.noblogmsg
+{
+    padding-left: 15px;
+}
 
 /* containers */
 
