@@ -50,3 +50,11 @@ HORAS TRABALHADAS: 4h
 - Inclusao de exibicao de feeds no modo lista ou expandido
 
 HORAS TRABALHADAS: 10h
+
+==========
+11/05/2009
+==========
+
+- Bugfixes na exibicao de feeds no dashboard, bugfixes no cadastro de feeds
+
+HORAS TRABALHADAS: 2h
